--- a/ApiProject/Views/Home/Index.cshtml
+++ b/ApiProject/Views/Home/Index.cshtml
@@ -2,7 +2,37 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Movie Search</h1>
+
+<form asp-action="DisplaySearch" asp-controller="Home">
+    Title:
+    <input type="text" name="Title" placeholder="Title" />
+    <input type="submit" value="Search" />
+</form>
+<form asp-action="DisplaySearch" asp-controller="Home">
+    Release Year:
+    <input type="text" name="ReleaseYear" placeholder="Title" />
+    <input type="submit" value="Search" />
+</form>
+<form asp-action="DisplaySearch" asp-controller="Home">
+    Rated:
+    <input type="text" name="Rated" placeholder="Rated" />
+    <input type="submit" value="Search" />
+</form>
+<form asp-action="DisplaySearch" asp-controller="Home">
+    Language:
+    <input type="text" name="Language" placeholder="Language" />
+    <input type="submit" value="Search" />
+</form>
+<form asp-action="DisplaySearch" asp-controller="Home">
+    Runtime:
+    <input type="text" name="Runtime" placeholder="Runtime" />
+    <input type="submit" value="Search" />
+</form>
+<form asp-action="DisplaySearch" asp-controller="Home">
+    Genre:
+    <input type="text" name="Genre" placeholder="Genre" />
+    <input type="submit" value="Search" />
+</form>
+
+
