Search Result Added with Form to Save
The method it calls does not exist yet.

--- a/ApiProject/Views/Home/SearchResults.cshtml
+++ b/ApiProject/Views/Home/SearchResults.cshtml
@@ -3,5 +3,24 @@
     ViewData["Title"] = "SearchResults";
 }
 
+
+@model  IEnumerable<Movie>
+
+
 <h1>SearchResults</h1>
 
+<table class="table table-bordered table table-hover">
+
+    <tr>
+        <th>Movie Title</th>
+        <th>Release Year</th>
+    </tr>
+    <tr>
+        @foreach(var movie in Model)
+        {
+        <td>@movie.Title</td>
+        <td>@movie.Year</td>
+        <td><form asp-action="AddToFavs" asp-controller="Home" method="post"><input type="submit" name="Add"/></form></td>
+        }
+    </tr>
+</table>
